test/positive/next04.cfr
// behavioral clafer test for next or X temporal operator

a
 b ?
  c ?
  [next next c]


// Rao: 2014-08-04: Failed to parse at second  
// Parse failed at line 9 column 9... before next b ] }

